kubernetes/apps/talos1018/self-hosted/n8n/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Apps
    gethomepage.dev/icon: sh-n8n.svg
    gethomepage.dev/name: n8n
    gethomepage.dev/app: n8n
    gethomepage.dev/description: Workflow automation
spec:
  parentRefs:
    - name: main-gateway
      namespace: network
  hostnames:
    - "n8n.${CLUSTER_DOMAIN}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: n8n
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n-webhook
spec:
  parentRefs:
    - name: main-gateway
      namespace: network
  hostnames:
    - "n8n-webhook.${DOMAIN}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: n8n
          port: 8080
